--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <p>This is main branch </p>
+    <p>This is new feature1 branch </p>
 </body>
 </html>
